# arbiter

./: .gitignore  API.md  CLAUDE.md  DEDUP.md  README.md  go.mod  plan.md  pyproject.toml  run  test_lora_train.py
cmd/arbiter/: api.go  api_llm_test.go  config.go  config_test.go  dedup.go  dedup_test.go  eventlog.go  main.go  proc.go  proc_test.go  scheduler.go  scheduler_test.go  store.go  vram.go
cmd/llm-worker/: main.go
cmd/vllm-worker/: main.go
scripts/: calibrate_concurrency.py
src/arbiter/: __init__.py  adapter_test.py  cli.py  client.py  config.py  log.py  memory.py  scheduler.py  schemas.py  server.py  store.py  worker.py  worker_main.py
src/arbiter/adapters/: __init__.py  aesthetic_scorer.py  base.py  birefnet.py  composite.py  flux.py  latentsync.py  lora_train.py  ltx2.py  moondream.py  registry.py  sadtalker.py  sonic.py  tts_clone.py  tts_custom.py  tts_design.py  whisper_large.py  z_image.py
src/arbiter/calibrate/: __main__.py  inputs.py  profiler.py  report.py  runner.py
tests/: conftest.py
tests/integration/: test_api.py  test_cli.py  test_moondream.py
tests/unit/: test_config.py  test_job_lifecycle.py  test_memory.py  test_scaling.py  test_scheduler.py  test_store.py
